solc_mutator_ossfuzz_seed_corpus/test_solidity/test_cff92d94a9144557cc487333ec225706d9bdf0b3f9c1fc8975970d04263f626a_0c1ce17b96593601ec5964e07d4c6c35a8a3ffc4_sol.sol
==== Source:  ====

==== Source: su0.sol ====
error er0(string ep0);
type T0 is address;
pragma solidity >= 0.0.0;
contract C0 {
  function f0(bytes calldata i0,bool[] calldata i1) internal   
  {
    for(    bool l0 = false;
;
bytes26(0x4e9407af271405cd6ae54e6119d078cee356cd46dc786090e066))
    {
      assembly
      {
        {
          for 
          {
          }
          i1
          {
            l0 := i1
            let al0 := 51045707242664426619842812634702867755902275306374432046360762251593660136179
          }
          {
            stop()
            l0 := 115792089237316195423570985008687907853269984665640564039457584007913129639935
          }
        }
      }
      bool l1 = true;
    }
    (bool l2, bytes memory l3) = address(this).call("ffffffffffffffffffffffffffffffffffffffffffffff01d7047fca1dfa57d2677144b16127d68c53e6da92e68bbdedec2c4d6c72");
    do
    {
      break;
      require((false || true), "0000000000ffffffffffffffffffffffff");
      break;
      if (true)
      {
        break;
      }
      else if (i1[1])
      {
        if ((true ? true : (uint24(5085707) == (uint24(0) % uint24(16777215)))))
        {
        }
        return;
      }
    }
    while (((int256(14759696655200084445697767349913284856314560341956980101694164674897850653131) | (~(((int256(57896044618658097711785492504343953926634992332820282019728792003956564819967) | int256(0)) ^ int256(57896044618658097711785492504343953926634992332820282019728792003956564819967))))) == int256(-32071926466407522336780595638256146529649719076792659788630815228333564838342)));
  }
  event ev0();
  modifier m0(uint72 i0) 
  {
    if (true)
    {
      _;
    }
    if (true)
    {
    }
    else if (true)
    {
    }
    else if (true)
    {
      _;
      (bool l0, bytes memory l1) = address(this).call("e125ca8d48ab729d019fc9d312b3b639fa1a8fddc0791a3c048980c6ca64db50a472f92d1d00a211bddf87450341ac2967f0b4b528939f");
    }
  }
  error er1(int256 ep0);
  function f1() public virtual m0(uint72(4722366482869645213695)) m0((((uint72(19712388981128602596) ^ ((uint72(0) - uint72(0)) - uint72(3595582309756319997801))) ** uint144(uint144(0))) | uint72(0))) payable returns(int160[1] memory o0,address payable o1)
  {
    (bool l0, bytes memory l1) = address(this).delegatecall(abi.encodeWithSignature("f1()"));
  }
  event ev1(address  ep0);
  error er2(address payable ep0);
  struct St0 {
    address el0;
    mapping(uint72 => address) el1;
  }
  int112 public constant cons0 = ((((int112((int112((int112(1705513145359829746055147631283346) / int112(2596148429267413814265248164610047))) / int112(0))) - int112(2596148429267413814265248164610047)) * int112(2596148429267413814265248164610047)) + int112(-256358377325419305046365458159740)) ^ int112(0));
  int256   s0 = int256(57896044618658097711785492504343953926634992332820282019728792003956564819967);
  bytes28   s1;
  int168   s2 = int168(80155226105180391262471678330719419298630801882414);
  constructor(bytes28 i0)   {
    s1 = bytes28(0x00000000000000000000000000000000000000000000000000000000);
    unchecked {
      (bool l0, bytes memory l1) = address(this).call(abi.encodeWithSelector(this.f1.selector));
      revert er2(payable(address(this)));
    }
  }
}
// ----
// TypeError 1397: (su0.sol:335-337): Call data elements cannot be accessed directly. Use ".offset" and ".length" to access the calldata offset and length of this array and then use "calldatacopy".
// TypeError 1397: (su0.sol:368-370): Call data elements cannot be accessed directly. Use ".offset" and ".length" to access the calldata offset and length of this array and then use "calldatacopy".
// Warning 3149: (su0.sol:1990-2104): The result type of the exponentiation operation is equal to the type of the first operand (uint72) ignoring the (larger) type of the second operand (uint144) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
